# MyTerminal

./: CMakeLists.txt  Makefile  Makefile.nopango  README.md  design.tex  myshell
extras/: parallel_printer.c  pprinter  second.cpp  test.ipynb  test.txt  test_loop  test_loop.c  test_program
include/core/: History.hpp
include/gui/: Tab.hpp  TerminalWindow.hpp
src/app/: main.cpp
src/core/: CommandExecutor.cpp  History.cpp
src/gui/: Tab.cpp  TerminalWindow.cpp
